refactors mongo connection, adds import Netz39 import routes
